@@ -13,41 +13,27 @@ import java.lang.invoke.VarHandle;
  * {@snippet :
  * struct OrtCUDAProviderOptions {
  *     int device_id;
- *     OrtCudnnConvAlgoSearch cudnn_conv_algo_search;
- *     size_t gpu_mem_limit;
+ *     enum OrtCudnnConvAlgoSearch cudnn_conv_algo_search;
+ *     unsigned long gpu_mem_limit;
  *     int arena_extend_strategy;
  *     int do_copy_in_default_stream;
  *     int has_user_compute_stream;
  *     void* user_compute_stream;
- *     OrtArenaCfg* default_memory_arena_cfg;
- *     int tunable_op_enabled;
+ *     struct OrtArenaCfg* default_memory_arena_cfg;
+ *     int tunable_op_enable;
+ *     int tunable_op_tuning_enable;
+ *     int tunable_op_max_tuning_duration_ms;
  * };
  * }
  */
 public class OrtCUDAProviderOptions {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-                    Constants$root.C_INT$LAYOUT.withName("device_id"),
-                    Constants$root.C_INT$LAYOUT.withName("cudnn_conv_algo_search"),
-                    Constants$root.C_LONG_LONG$LAYOUT.withName("gpu_mem_limit"),
-                    Constants$root.C_INT$LAYOUT.withName("arena_extend_strategy"),
-                    Constants$root.C_INT$LAYOUT.withName("do_copy_in_default_stream"),
-                    Constants$root.C_INT$LAYOUT.withName("has_user_compute_stream"),
-                    MemoryLayout.paddingLayout(32),
-                    Constants$root.C_POINTER$LAYOUT.withName("user_compute_stream"),
-                    Constants$root.C_POINTER$LAYOUT.withName("default_memory_arena_cfg"),
-                    Constants$root.C_INT$LAYOUT.withName("tunable_op_enabled"),
-                    MemoryLayout.paddingLayout(32))
-            .withName("OrtCUDAProviderOptions");
-
     public static MemoryLayout $LAYOUT() {
-        return OrtCUDAProviderOptions.$struct$LAYOUT;
+        return constants$2.const$5;
     }
 
-    static final VarHandle device_id$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("device_id"));
-
     public static VarHandle device_id$VH() {
-        return OrtCUDAProviderOptions.device_id$VH;
+        return constants$3.const$0;
     }
     /**
      * Getter for field:
@@ -56,7 +42,7 @@ public class OrtCUDAProviderOptions {
      * }
      */
     public static int device_id$get(MemorySegment seg) {
-        return (int) OrtCUDAProviderOptions.device_id$VH.get(seg);
+        return (int) constants$3.const$0.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -65,88 +51,79 @@ public class OrtCUDAProviderOptions {
      * }
      */
     public static void device_id$set(MemorySegment seg, int x) {
-        OrtCUDAProviderOptions.device_id$VH.set(seg, x);
+        constants$3.const$0.set(seg, 0L, x);
     }
 
     public static int device_id$get(MemorySegment seg, long index) {
-        return (int) OrtCUDAProviderOptions.device_id$VH.get(seg.asSlice(index * sizeof()));
+        return (int) constants$3.const$0.get(seg, index * sizeof());
     }
 
     public static void device_id$set(MemorySegment seg, long index, int x) {
-        OrtCUDAProviderOptions.device_id$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$3.const$0.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle cudnn_conv_algo_search$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("cudnn_conv_algo_search"));
-
     public static VarHandle cudnn_conv_algo_search$VH() {
-        return OrtCUDAProviderOptions.cudnn_conv_algo_search$VH;
+        return constants$3.const$1;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * OrtCudnnConvAlgoSearch cudnn_conv_algo_search;
+     * enum OrtCudnnConvAlgoSearch cudnn_conv_algo_search;
      * }
      */
     public static int cudnn_conv_algo_search$get(MemorySegment seg) {
-        return (int) OrtCUDAProviderOptions.cudnn_conv_algo_search$VH.get(seg);
+        return (int) constants$3.const$1.get(seg, 0L);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * OrtCudnnConvAlgoSearch cudnn_conv_algo_search;
+     * enum OrtCudnnConvAlgoSearch cudnn_conv_algo_search;
      * }
      */
     public static void cudnn_conv_algo_search$set(MemorySegment seg, int x) {
-        OrtCUDAProviderOptions.cudnn_conv_algo_search$VH.set(seg, x);
+        constants$3.const$1.set(seg, 0L, x);
     }
 
     public static int cudnn_conv_algo_search$get(MemorySegment seg, long index) {
-        return (int) OrtCUDAProviderOptions.cudnn_conv_algo_search$VH.get(seg.asSlice(index * sizeof()));
+        return (int) constants$3.const$1.get(seg, index * sizeof());
     }
 
     public static void cudnn_conv_algo_search$set(MemorySegment seg, long index, int x) {
-        OrtCUDAProviderOptions.cudnn_conv_algo_search$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$3.const$1.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle gpu_mem_limit$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("gpu_mem_limit"));
-
     public static VarHandle gpu_mem_limit$VH() {
-        return OrtCUDAProviderOptions.gpu_mem_limit$VH;
+        return constants$3.const$2;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * size_t gpu_mem_limit;
+     * unsigned long gpu_mem_limit;
      * }
      */
     public static long gpu_mem_limit$get(MemorySegment seg) {
-        return (long) OrtCUDAProviderOptions.gpu_mem_limit$VH.get(seg);
+        return (long) constants$3.const$2.get(seg, 0L);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * size_t gpu_mem_limit;
+     * unsigned long gpu_mem_limit;
      * }
      */
     public static void gpu_mem_limit$set(MemorySegment seg, long x) {
-        OrtCUDAProviderOptions.gpu_mem_limit$VH.set(seg, x);
+        constants$3.const$2.set(seg, 0L, x);
     }
 
     public static long gpu_mem_limit$get(MemorySegment seg, long index) {
-        return (long) OrtCUDAProviderOptions.gpu_mem_limit$VH.get(seg.asSlice(index * sizeof()));
+        return (long) constants$3.const$2.get(seg, index * sizeof());
     }
 
     public static void gpu_mem_limit$set(MemorySegment seg, long index, long x) {
-        OrtCUDAProviderOptions.gpu_mem_limit$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$3.const$2.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle arena_extend_strategy$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("arena_extend_strategy"));
-
     public static VarHandle arena_extend_strategy$VH() {
-        return OrtCUDAProviderOptions.arena_extend_strategy$VH;
+        return constants$3.const$3;
     }
     /**
      * Getter for field:
@@ -155,7 +132,7 @@ public class OrtCUDAProviderOptions {
      * }
      */
     public static int arena_extend_strategy$get(MemorySegment seg) {
-        return (int) OrtCUDAProviderOptions.arena_extend_strategy$VH.get(seg);
+        return (int) constants$3.const$3.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -164,22 +141,19 @@ public class OrtCUDAProviderOptions {
      * }
      */
     public static void arena_extend_strategy$set(MemorySegment seg, int x) {
-        OrtCUDAProviderOptions.arena_extend_strategy$VH.set(seg, x);
+        constants$3.const$3.set(seg, 0L, x);
     }
 
     public static int arena_extend_strategy$get(MemorySegment seg, long index) {
-        return (int) OrtCUDAProviderOptions.arena_extend_strategy$VH.get(seg.asSlice(index * sizeof()));
+        return (int) constants$3.const$3.get(seg, index * sizeof());
     }
 
     public static void arena_extend_strategy$set(MemorySegment seg, long index, int x) {
-        OrtCUDAProviderOptions.arena_extend_strategy$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$3.const$3.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle do_copy_in_default_stream$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("do_copy_in_default_stream"));
-
     public static VarHandle do_copy_in_default_stream$VH() {
-        return OrtCUDAProviderOptions.do_copy_in_default_stream$VH;
+        return constants$3.const$4;
     }
     /**
      * Getter for field:
@@ -188,7 +162,7 @@ public class OrtCUDAProviderOptions {
      * }
      */
     public static int do_copy_in_default_stream$get(MemorySegment seg) {
-        return (int) OrtCUDAProviderOptions.do_copy_in_default_stream$VH.get(seg);
+        return (int) constants$3.const$4.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -197,22 +171,19 @@ public class OrtCUDAProviderOptions {
      * }
      */
     public static void do_copy_in_default_stream$set(MemorySegment seg, int x) {
-        OrtCUDAProviderOptions.do_copy_in_default_stream$VH.set(seg, x);
+        constants$3.const$4.set(seg, 0L, x);
     }
 
     public static int do_copy_in_default_stream$get(MemorySegment seg, long index) {
-        return (int) OrtCUDAProviderOptions.do_copy_in_default_stream$VH.get(seg.asSlice(index * sizeof()));
+        return (int) constants$3.const$4.get(seg, index * sizeof());
     }
 
     public static void do_copy_in_default_stream$set(MemorySegment seg, long index, int x) {
-        OrtCUDAProviderOptions.do_copy_in_default_stream$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$3.const$4.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle has_user_compute_stream$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("has_user_compute_stream"));
-
     public static VarHandle has_user_compute_stream$VH() {
-        return OrtCUDAProviderOptions.has_user_compute_stream$VH;
+        return constants$3.const$5;
     }
     /**
      * Getter for field:
@@ -221,7 +192,7 @@ public class OrtCUDAProviderOptions {
      * }
      */
     public static int has_user_compute_stream$get(MemorySegment seg) {
-        return (int) OrtCUDAProviderOptions.has_user_compute_stream$VH.get(seg);
+        return (int) constants$3.const$5.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -230,22 +201,19 @@ public class OrtCUDAProviderOptions {
      * }
      */
     public static void has_user_compute_stream$set(MemorySegment seg, int x) {
-        OrtCUDAProviderOptions.has_user_compute_stream$VH.set(seg, x);
+        constants$3.const$5.set(seg, 0L, x);
     }
 
     public static int has_user_compute_stream$get(MemorySegment seg, long index) {
-        return (int) OrtCUDAProviderOptions.has_user_compute_stream$VH.get(seg.asSlice(index * sizeof()));
+        return (int) constants$3.const$5.get(seg, index * sizeof());
     }
 
     public static void has_user_compute_stream$set(MemorySegment seg, long index, int x) {
-        OrtCUDAProviderOptions.has_user_compute_stream$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$3.const$5.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle user_compute_stream$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("user_compute_stream"));
-
     public static VarHandle user_compute_stream$VH() {
-        return OrtCUDAProviderOptions.user_compute_stream$VH;
+        return constants$4.const$0;
     }
     /**
      * Getter for field:
@@ -254,7 +222,7 @@ public class OrtCUDAProviderOptions {
      * }
      */
     public static MemorySegment user_compute_stream$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment) OrtCUDAProviderOptions.user_compute_stream$VH.get(seg);
+        return (java.lang.foreign.MemorySegment) constants$4.const$0.get(seg, 0L);
     }
     /**
      * Setter for field:
@@ -263,83 +231,135 @@ public class OrtCUDAProviderOptions {
      * }
      */
     public static void user_compute_stream$set(MemorySegment seg, MemorySegment x) {
-        OrtCUDAProviderOptions.user_compute_stream$VH.set(seg, x);
+        constants$4.const$0.set(seg, 0L, x);
     }
 
     public static MemorySegment user_compute_stream$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)
-                OrtCUDAProviderOptions.user_compute_stream$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemorySegment) constants$4.const$0.get(seg, index * sizeof());
     }
 
     public static void user_compute_stream$set(MemorySegment seg, long index, MemorySegment x) {
-        OrtCUDAProviderOptions.user_compute_stream$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$4.const$0.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle default_memory_arena_cfg$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("default_memory_arena_cfg"));
-
     public static VarHandle default_memory_arena_cfg$VH() {
-        return OrtCUDAProviderOptions.default_memory_arena_cfg$VH;
+        return constants$4.const$1;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * OrtArenaCfg* default_memory_arena_cfg;
+     * struct OrtArenaCfg* default_memory_arena_cfg;
      * }
      */
     public static MemorySegment default_memory_arena_cfg$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment) OrtCUDAProviderOptions.default_memory_arena_cfg$VH.get(seg);
+        return (java.lang.foreign.MemorySegment) constants$4.const$1.get(seg, 0L);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * OrtArenaCfg* default_memory_arena_cfg;
+     * struct OrtArenaCfg* default_memory_arena_cfg;
      * }
      */
     public static void default_memory_arena_cfg$set(MemorySegment seg, MemorySegment x) {
-        OrtCUDAProviderOptions.default_memory_arena_cfg$VH.set(seg, x);
+        constants$4.const$1.set(seg, 0L, x);
     }
 
     public static MemorySegment default_memory_arena_cfg$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)
-                OrtCUDAProviderOptions.default_memory_arena_cfg$VH.get(seg.asSlice(index * sizeof()));
+        return (java.lang.foreign.MemorySegment) constants$4.const$1.get(seg, index * sizeof());
     }
 
     public static void default_memory_arena_cfg$set(MemorySegment seg, long index, MemorySegment x) {
-        OrtCUDAProviderOptions.default_memory_arena_cfg$VH.set(seg.asSlice(index * sizeof()), x);
+        constants$4.const$1.set(seg, index * sizeof(), x);
     }
 
-    static final VarHandle tunable_op_enabled$VH =
-            $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("tunable_op_enabled"));
-
-    public static VarHandle tunable_op_enabled$VH() {
-        return OrtCUDAProviderOptions.tunable_op_enabled$VH;
+    public static VarHandle tunable_op_enable$VH() {
+        return constants$4.const$2;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * int tunable_op_enabled;
+     * int tunable_op_enable;
      * }
      */
-    public static int tunable_op_enabled$get(MemorySegment seg) {
-        return (int) OrtCUDAProviderOptions.tunable_op_enabled$VH.get(seg);
+    public static int tunable_op_enable$get(MemorySegment seg) {
+        return (int) constants$4.const$2.get(seg, 0L);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * int tunable_op_enabled;
+     * int tunable_op_enable;
      * }
      */
-    public static void tunable_op_enabled$set(MemorySegment seg, int x) {
-        OrtCUDAProviderOptions.tunable_op_enabled$VH.set(seg, x);
+    public static void tunable_op_enable$set(MemorySegment seg, int x) {
+        constants$4.const$2.set(seg, 0L, x);
     }
 
-    public static int tunable_op_enabled$get(MemorySegment seg, long index) {
-        return (int) OrtCUDAProviderOptions.tunable_op_enabled$VH.get(seg.asSlice(index * sizeof()));
+    public static int tunable_op_enable$get(MemorySegment seg, long index) {
+        return (int) constants$4.const$2.get(seg, index * sizeof());
     }
 
-    public static void tunable_op_enabled$set(MemorySegment seg, long index, int x) {
-        OrtCUDAProviderOptions.tunable_op_enabled$VH.set(seg.asSlice(index * sizeof()), x);
+    public static void tunable_op_enable$set(MemorySegment seg, long index, int x) {
+        constants$4.const$2.set(seg, index * sizeof(), x);
+    }
+
+    public static VarHandle tunable_op_tuning_enable$VH() {
+        return constants$4.const$3;
+    }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * int tunable_op_tuning_enable;
+     * }
+     */
+    public static int tunable_op_tuning_enable$get(MemorySegment seg) {
+        return (int) constants$4.const$3.get(seg, 0L);
+    }
+    /**
+     * Setter for field:
+     * {@snippet :
+     * int tunable_op_tuning_enable;
+     * }
+     */
+    public static void tunable_op_tuning_enable$set(MemorySegment seg, int x) {
+        constants$4.const$3.set(seg, 0L, x);
+    }
+
+    public static int tunable_op_tuning_enable$get(MemorySegment seg, long index) {
+        return (int) constants$4.const$3.get(seg, index * sizeof());
+    }
+
+    public static void tunable_op_tuning_enable$set(MemorySegment seg, long index, int x) {
+        constants$4.const$3.set(seg, index * sizeof(), x);
+    }
+
+    public static VarHandle tunable_op_max_tuning_duration_ms$VH() {
+        return constants$4.const$4;
+    }
+    /**
+     * Getter for field:
+     * {@snippet :
+     * int tunable_op_max_tuning_duration_ms;
+     * }
+     */
+    public static int tunable_op_max_tuning_duration_ms$get(MemorySegment seg) {
+        return (int) constants$4.const$4.get(seg, 0L);
+    }
+    /**
+     * Setter for field:
+     * {@snippet :
+     * int tunable_op_max_tuning_duration_ms;
+     * }
+     */
+    public static void tunable_op_max_tuning_duration_ms$set(MemorySegment seg, int x) {
+        constants$4.const$4.set(seg, 0L, x);
+    }
+
+    public static int tunable_op_max_tuning_duration_ms$get(MemorySegment seg, long index) {
+        return (int) constants$4.const$4.get(seg, index * sizeof());
+    }
+
+    public static void tunable_op_max_tuning_duration_ms$set(MemorySegment seg, long index, int x) {
+        constants$4.const$4.set(seg, index * sizeof(), x);
     }
 
     public static long sizeof() {
@@ -354,7 +374,7 @@ public class OrtCUDAProviderOptions {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
 
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) {
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) {
         return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope);
     }
 }
